ferritin/src/snapshots/ferritin__tests__get_generic_enum_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::GenericEnum\"), OutputMode ::\nPlain, & get_fixture_crate_path ())"
---
Item: GenericEnum
Kind: Enum
Visibility: Public
Defined at: fixture_crate::GenericEnum
In crate: fixture-crate (0.1.0)

A generic enum for testing

See also crate::TestEnum

enum GenericEnum<T, U = String>
where
    T: Clone + Send,
    U: std::fmt::Display,
{
    Simple,
    WithData(T),
    Mixed {
        data: T,
        info: U,
    },
}

Variants:

  ◦ Simple 
    Simple variant

  ◦ WithData 
    Variant with generic data

  ◦ Mixed 
    Variant with mixed generics

Trait Implementations

std: From<T>

  ◦ impl<T: 'static + ?Sized> Any

  ◦ impl<T: ?Sized> Borrow<T>

  ◦ impl<T: ?Sized> BorrowMut<T>

  ◦ impl<T: Freeze, U: Freeze> Freeze

  ◦ impl<T, U: From<T>> Into<U>

  ◦ impl<T: RefUnwindSafe, U: RefUnwindSafe> RefUnwindSafe

  ◦ impl<T, U: Send> Send

  ◦ impl<T: Sync, U: Sync> Sync

  ◦ impl<T, U: Into<T>> TryFrom<U>
        type Error = Infallible

  ◦ impl<T, U: TryFrom<T>> TryInto<U>
        type Error = <U as TryFrom<T>>::Error

  ◦ impl<T: Unpin, U: Unpin> Unpin

  ◦ impl<T: UnsafeUnpin, U: UnsafeUnpin> UnsafeUnpin

  ◦ impl<T: UnwindSafe, U: UnwindSafe> UnwindSafe
