ferritin/src/snapshots/ferritin__tests__get_generic_enum_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::GenericEnum\"), OutputMode ::\nTestMode, & get_fixture_crate_path ())"
---
<metadata>
  <field name="Item">GenericEnum</field>
  <field name="Kind">Enum</field>
  <field name="Visibility">Public</field>
  <field name="Defined at"><type-name>fixture_crate</type-name><punctuation>::</punctuation><type-name>GenericEnum</type-name></field>
  <field name="In crate">fixture-crate (0.1.0)</field>
</metadata>
<truncated level="full"><p>
A generic enum for testing</p>
<p>
See also <inline-code>crate::TestEnum</inline-code></p>
</truncated>
<generated-code>
<keyword>enum</keyword> <type-name>GenericEnum</type-name><punctuation><</punctuation><generic>T</generic><punctuation>,</punctuation> <generic>U</generic> <operator>=</operator> <type-name>String</type-name><punctuation>></punctuation>
<keyword>where</keyword>
    <generic>T</generic><punctuation>:</punctuation> <type-name>Clone</type-name> + <type-name>Send</type-name><punctuation>,</punctuation>
    <generic>U</generic><punctuation>:</punctuation> <type-name>std::fmt::Display</type-name> <punctuation>{</punctuation>
    <type-name>Simple</type-name><punctuation>,</punctuation>
    <type-name>WithData</type-name><punctuation>(</punctuation><generic>T</generic><punctuation>)</punctuation><punctuation>,</punctuation>
    <type-name>Mixed</type-name> <punctuation>{</punctuation>
        <field-name>data</field-name><punctuation>:</punctuation> <generic>T</generic><punctuation>,</punctuation>
        <field-name>info</field-name><punctuation>:</punctuation> <generic>U</generic><punctuation>,</punctuation>
    <punctuation>}</punctuation><punctuation>,</punctuation>
<punctuation>}</punctuation></generated-code>
<section><section-title>Variants:</section-title><list>
  <item><p>
<type-name>Simple</type-name> </p>
<truncated level="single-line"><p>
Simple variant</p>
</truncated>
</item>
  <item><p>
<type-name>WithData</type-name> </p>
<truncated level="single-line"><p>
Variant with generic data</p>
</truncated>
</item>
  <item><p>
<type-name>Mixed</type-name> </p>
<truncated level="single-line"><p>
Variant with mixed generics</p>
</truncated>
</item>
</list>
</section><section><section-title>Trait Implementations</section-title><p>
std: <type-name>From</type-name><punctuation><</punctuation><generic>T</generic><punctuation>></punctuation></p>
<list>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>:</punctuation> <lifetime>'static</lifetime> + <operator>?</operator><type-name>Sized</type-name><punctuation>></punctuation> <type-name>Any</type-name></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>:</punctuation> <operator>?</operator><type-name>Sized</type-name><punctuation>></punctuation> <type-name>Borrow</type-name><punctuation><</punctuation><generic>T</generic><punctuation>></punctuation></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>:</punctuation> <operator>?</operator><type-name>Sized</type-name><punctuation>></punctuation> <type-name>BorrowMut</type-name><punctuation><</punctuation><generic>T</generic><punctuation>></punctuation></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>:</punctuation> <type-name>Freeze</type-name><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>Freeze</type-name><punctuation>></punctuation> <type-name>Freeze</type-name></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>From</type-name><punctuation><</punctuation><generic>T</generic><punctuation>></punctuation><punctuation>></punctuation> <type-name>Into</type-name><punctuation><</punctuation><generic>U</generic><punctuation>></punctuation></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>:</punctuation> <type-name>RefUnwindSafe</type-name><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>RefUnwindSafe</type-name><punctuation>></punctuation> <type-name>RefUnwindSafe</type-name></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>Send</type-name><punctuation>></punctuation> <type-name>Send</type-name></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>:</punctuation> <type-name>Sync</type-name><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>Sync</type-name><punctuation>></punctuation> <type-name>Sync</type-name></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>Into</type-name><punctuation><</punctuation><generic>T</generic><punctuation>></punctuation><punctuation>></punctuation> <type-name>TryFrom</type-name><punctuation><</punctuation><generic>U</generic><punctuation>></punctuation></generated-code>
<generated-code>
    <keyword>type</keyword> <type-name>Error</type-name> <operator>=</operator> <type-name>Infallible</type-name></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>TryFrom</type-name><punctuation><</punctuation><generic>T</generic><punctuation>></punctuation><punctuation>></punctuation> <type-name>TryInto</type-name><punctuation><</punctuation><generic>U</generic><punctuation>></punctuation></generated-code>
<generated-code>
    <keyword>type</keyword> <type-name>Error</type-name> <operator>=</operator> <punctuation><</punctuation><generic>U</generic> <keyword>as</keyword> <type-name>TryFrom</type-name><punctuation><</punctuation><generic>T</generic><punctuation>></punctuation><punctuation>></punctuation><punctuation>::</punctuation>Error</generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>:</punctuation> <type-name>Unpin</type-name><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>Unpin</type-name><punctuation>></punctuation> <type-name>Unpin</type-name></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>:</punctuation> <type-name>UnsafeUnpin</type-name><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>UnsafeUnpin</type-name><punctuation>></punctuation> <type-name>UnsafeUnpin</type-name></generated-code>
</item>
  <item><generated-code>
<keyword>impl</keyword><punctuation><</punctuation><generic>T</generic><punctuation>:</punctuation> <type-name>UnwindSafe</type-name><punctuation>,</punctuation> <generic>U</generic><punctuation>:</punctuation> <type-name>UnwindSafe</type-name><punctuation>></punctuation> <type-name>UnwindSafe</type-name></generated-code>
</item>
</list>
</section>
