ferritin/src/snapshots/ferritin__tests__get_generics_impl_trait_arg_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::generics::set_data\"), &\nget_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/generics/fn.set_data.html",
  "meta": {
    "name": "set_data",
    "kind": "function",
    "visibility": "public",
    "definedAt": "fixture_crate::generics::set_data",
    "crateName": "fixture-crate",
    "crateVersion": "0.1.0"
  },
  "docs": [
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "impl Trait",
              "style": "InlineCode"
            },
            {
              "text": " in argument position — the whole reason this module exists.",
              "style": "Plain"
            }
          ]
        },
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "Rustdoc lowers this to a ",
              "style": "Plain"
            },
            {
              "text": "synthetic",
              "style": "Emphasis"
            },
            {
              "text": " generic parameter (",
              "style": "Plain"
            },
            {
              "text": "is_synthetic",
              "style": "InlineCode"
            },
            {
              "text": ")",
              "style": "Plain"
            },
            {
              "text": " ",
              "style": "Plain"
            },
            {
              "text": "literally named ",
              "style": "Plain"
            },
            {
              "text": "impl Into<Cow<'static, str>>",
              "style": "InlineCode"
            },
            {
              "text": ", bounded by the ",
              "style": "Plain"
            },
            {
              "text": "impl",
              "style": "InlineCode"
            },
            {
              "text": "'s own",
              "style": "Plain"
            },
            {
              "text": " ",
              "style": "Plain"
            },
            {
              "text": "bounds. Rendering the parameter list verbatim produces",
              "style": "Plain"
            },
            {
              "text": " ",
              "style": "Plain"
            },
            {
              "text": "fn set_data<impl Into<Cow<'static, str>>: Into<Cow<'static, str>>>",
              "style": "InlineCode"
            },
            {
              "text": ", which",
              "style": "Plain"
            },
            {
              "text": " ",
              "style": "Plain"
            },
            {
              "text": "is not Rust.",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "function",
    "name": "set_data",
    "returns": [
      {
        "text": "String",
        "style": "TypeName",
        "path": "alloc::string::String"
      }
    ],
    "signature": [
      {
        "text": "fn",
        "style": "Keyword"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "set_data",
        "style": "Plain",
        "path": "fixture_crate::generics::set_data"
      },
      {
        "text": "(",
        "style": "Punctuation"
      },
      {
        "text": "data",
        "style": "Plain"
      },
      {
        "text": ":",
        "style": "Punctuation"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "impl",
        "style": "Keyword"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "Into",
        "style": "TypeName",
        "path": "core::convert::Into"
      },
      {
        "text": "<",
        "style": "Punctuation"
      },
      {
        "text": "std::borrow::Cow",
        "style": "TypeName",
        "path": "alloc::borrow::Cow"
      },
      {
        "text": "<",
        "style": "Punctuation"
      },
      {
        "text": "'static",
        "style": "Lifetime"
      },
      {
        "text": ",",
        "style": "Punctuation"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "str",
        "style": "TypeName"
      },
      {
        "text": ">",
        "style": "Punctuation"
      },
      {
        "text": ">",
        "style": "Punctuation"
      },
      {
        "text": ")",
        "style": "Punctuation"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "->",
        "style": "Operator"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "String",
        "style": "TypeName",
        "path": "alloc::string::String"
      }
    ]
  }
}
