ferritin/src/snapshots/ferritin__tests__get_generics_impl_trait_arg_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::generics::set_data\"), OutputMode\n:: Plain, & get_fixture_crate_path ())"
---
Item: set_data
Kind: Function
Visibility: Public
Defined at: fixture_crate::generics::set_data
In crate: fixture-crate (0.1.0)

impl Trait in argument position — the whole reason this module exists.

Rustdoc lowers this to a synthetic generic parameter (is_synthetic) literally named impl Into<Cow<'static, str>>, bounded by the impl's own bounds. Rendering the parameter list verbatim produces fn set_data<impl Into<Cow<'static, str>>: Into<Cow<'static, str>>>, which is not Rust.

fn set_data(data: impl Into<std::borrow::Cow<'static, str>>) -> String
